--- a/production_settings/gunicorn/gunicorn.service
+++ b/production_settings/gunicorn/gunicorn.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=gunicorn daemon for Dawdle
+Description=gunicorn daemon for Tanks
 After=network.target
 
 [Service]
 User=dimtasev
 Group=www-data
-WorkingDirectory=/home/dimtasev/dawdle-web
-ExecStart=/home/dimtasev/pydawdle/bin/gunicorn --access-logfile - --workers 3 --bind unix:/home/dimtasev/dawdle.sock Dawdle.wsgi:application
+WorkingDirectory=/home/dimtasev/tanks_server
+ExecStart=/home/dimtasev/pydawdle/bin/gunicorn --access-logfile - --workers 3 --bind unix:/home/dimtasev/tanks.sock Tanks.wsgi:application
 
 [Install]
 WantedBy=multi-user.target
